# public/api-docs/models/swagger.yaml
@@ -31,6 +31,41 @@ paths:
           description: Result object not found
           schema:
             $ref: '#/definitions/Message'
+    post:
+      tags:
+        - Results
+      summary: Creates a new result
+      description: Creates a new result
+      operationId: miw_post_results
+      parameters:
+        - name: data
+          in: body
+          description: '`Result` properties to add to the system'
+          required: true
+          schema:
+            $ref: '#/definitions/ResultData'
+      responses:
+        '201':
+          description: '`Created` Result created'
+          schema:
+            $ref: '#/definitions/Result'
+        '400':
+          description: '`Bad Request` Bad data given.'
+          schema:
+            $ref: '#/definitions/Message'
+        '422':
+          description: '`Unprocessable entity` Some data requiered is missed'
+          schema:
+            $ref: '#/definitions/Message'
+    options:
+      tags:
+        - Results
+      summary: Provides the list of HTTP supported methods
+      description: Return a `Allow` header with a list of HTTP supported methods.
+      operationId: miw_options_results
+      responses:
+        '200':
+          description: '`Allow` header &lt;Response body is empty&gt;'
   '/results/{resultId}':
     get:
       tags:
@@ -47,6 +82,48 @@ paths:
             $ref: '#/definitions/Result'
         '404':
           description: Result id. not found
+          schema:
+            $ref: '#/definitions/Message'
+    put:
+      tags:
+        - Results
+      summary: Updates a result
+      description: Updates the result identified by `resultId`.
+      operationId: miw_put_result
+      parameters:
+        - $ref: '#/parameters/resultId'
+        - name: data
+          in: body
+          description: '`Result` data to update'
+          required: true
+          schema:
+            $ref: '#/definitions/ResultData'
+      responses:
+        '200':
+          description: '`Ok` User previously existed and is now updated'
+          schema:
+            $ref: '#/definitions/User'
+        '400':
+          description: '`Bad Request` User name or e-mail already exists'
+          schema:
+            $ref: '#/definitions/Message'
+        '404':
+          description: '`Not Found` The user could not be found'
+          schema:
+            $ref: '#/definitions/Message'
+    delete:
+      tags:
+        - Results
+      summary: Deletes a result
+      description: Deletes the result identified by `resultId`.
+      operationId: miw_delete_results
+      parameters:
+        - $ref: '#/parameters/resultId'
+      responses:
+        '204':
+          description: Result deleted &lt;Response body is empty&gt;
+        '404':
+          description: Result not found
           schema:
             $ref: '#/definitions/Message'
   /users:
@@ -181,7 +258,17 @@ definitions:
       time:
         description: Date of result
         type: string
-        format: date-time
+        format: date
+    example:
+      id: 1
+      result: 10
+      user:
+        id: 1508
+        username: User name
+        email: User email
+        enabled: true
+        token: $2$6a7f5b9e15f9c4a51495
+      time: 2016-12-23 12:30:30.000000
   ResultData:
     properties:
       id:
@@ -197,7 +284,17 @@ definitions:
       time:
         description: Date of result
         type: string
-        format: date-time
+        format: date
+    example:
+      id: 1
+      result: 10
+      user:
+        username: User_name
+        email: User_email@example.com
+        password: User_password
+        enabled: true
+        token: $2$6a7f5b9e15f9c4a51495
+        time: 2016-12-23 12:30:30.000000
   ResultsArray:
     properties:
       results:
